--- a/src/app/components/result/result.component.html
+++ b/src/app/components/result/result.component.html
@@ -1,5 +1,12 @@
 <div class="result-component">
-    <h1>{{event.name}}</h1>
-    <h2>{{event.date | date}} || {{event.location}} </h2>
-    <p>{{event.description || '--'}}</p>
+    <mat-card>
+        <mat-card-header>
+            <img mat-card-avatar src="https://localist-images.azureedge.net/photos/617248/big_square/0ec0b2778ca03f5d57679db6d450fc90cff06b6f.jpg">
+            <mat-card-title>{{event.name}}</mat-card-title>
+            <mat-card-subtitle>{{event.date | date}} // {{event.location}}</mat-card-subtitle>
+        </mat-card-header>
+        <mat-card-content>
+            {{event.description || '--'}}
+        </mat-card-content>
+    </mat-card>
 </div>
