--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -14,15 +14,14 @@
                     <mat-icon>close</mat-icon>
                 </button>
             </mat-form-field>
-            <button type="button" mat-flat-button color="primary" (click)="click()">SEARCH</button>
+            <button type="button" mat-flat-button color="primary" (click)="click()">
+                <mat-icon>search</mat-icon>
+            </button>
         </div>
     </form>
     
     <div class="results-container">
         <mat-progress-bar *ngIf="isLoading" mode="indeterminate"></mat-progress-bar>
         <app-result *ngFor="let event of events" [event]="event"></app-result>
-        <div class="result" *ngFor="let event of events">
-            {{event}}
-        </div>
     </div>
 </div>
