--- a/src/app/components/result/result.component.html
+++ b/src/app/components/result/result.component.html
@@ -2,7 +2,7 @@
     <mat-card>
         <mat-card-header>
             <img mat-card-avatar src="https://localist-images.azureedge.net/photos/617248/big_square/0ec0b2778ca03f5d57679db6d450fc90cff06b6f.jpg">
-            <mat-card-title>{{event.name}}</mat-card-title>
+            <mat-card-title>{{event.title}}</mat-card-title>
             <mat-card-subtitle>{{event.date | dayjs}} @ {{event.location}}</mat-card-subtitle>
         </mat-card-header>
         <mat-card-content>
