--- a/src/app/components/results/results.component.html
+++ b/src/app/components/results/results.component.html
@@ -1,8 +1,13 @@
 <div class="results-component">
     <app-search-box></app-search-box>
     <mat-divider></mat-divider>
-    <div class="results-container">
-        <mat-progress-bar *ngIf="isLoading" mode="indeterminate"></mat-progress-bar>
-        <app-result *ngFor="let event of events" [event]="event"></app-result>
+    <mat-progress-bar *ngIf="isLoading" mode="indeterminate"></mat-progress-bar>
+    <div *ngIf="queryResult" class="results-container">
+        <p class="results-summary">
+            Found 
+            <span class="emphasize">{{queryResult.resultCount}}</span> results!
+            Here are <span class="emphasize">{{queryResult.pageSize}}</span> of them.
+        </p>
+        <app-result *ngFor="let event of queryResult.results" [event]="event"></app-result>
     </div>
 </div>
