--- a/src/app/components/result/result.component.html
+++ b/src/app/components/result/result.component.html
@@ -8,15 +8,12 @@
         <mat-card-content>
             {{event.description || '--'}}
         </mat-card-content>
-        <mat-card-actions align="end">
+        <mat-card-actions>
             <div class="actions-container">
-                <app-source [source]="event.source"></app-source>
+                <app-source [event]="event"></app-source>
+                <div class="flex-spacer"></div>
                 <app-result-actions [event]="event"></app-result-actions>
             </div>
         </mat-card-actions>
-        <!-- <mat-card-footer>
-            <mat-divider></mat-divider>
-            
-        </mat-card-footer> -->
     </mat-card>
 </div>
