--- a/src/app/components/result/result.component.scss
+++ b/src/app/components/result/result.component.scss
@@ -1,3 +1,12 @@
 .result-component {
     margin-bottom: 2rem;
 }
+
+.actions-container {
+    align-items: center;
+    display: flex;
+}
+
+.flex-spacer {
+    flex-grow: 1;
+}
