--- a/src/app/components/source/source.component.html
+++ b/src/app/components/source/source.component.html
@@ -1,10 +1,10 @@
 <div class="source-component">
-    <div *ngIf="!source.url" class="button source no-link">
+    <div class="button source no-link">
         <mat-icon>trending_up</mat-icon>
-        {{source.name}}
+        {{event.source}}
     </div>
-    <a mat-button *ngIf="source.url" [href]="source.url" target="_blank"> 
+    <!-- <a mat-button *ngIf="source.url" [href]="source.url" target="_blank"> 
         <mat-icon>trending_up</mat-icon>
         {{source.name}}
-    </a>
+    </a> -->
 </div>
