--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -4,5 +4,5 @@
         <h2 class="title">Bringing graduate-level Panthers together</h2>
     </div>
 
-    <app-search-box></app-search-box>
+    <app-search-box (search)="navigate($event)"></app-search-box>
 </div>
