--- a/src/app/components/result/result.component.scss
+++ b/src/app/components/result/result.component.scss
@@ -1,3 +1,13 @@
 .result-component {
     margin-bottom: 2rem;
 }
+
+.actions-container {
+    display: flex;
+    align-items: center;
+    margin-right: 1rem;
+
+    .spacer {
+        flex-grow: 1;
+    }
+}
