--- a/src/app/components/results/results.component.html
+++ b/src/app/components/results/results.component.html
@@ -1,7 +1,7 @@
 <div class="results-component">
-    <app-search-box></app-search-box>
+    <app-search-box (search)="navigate($event)"></app-search-box>
     <mat-divider></mat-divider>
-    <div class="results-container">
+    <div class="results-container" *ngIf="!isLoading">
         <mat-progress-bar *ngIf="isLoading" mode="indeterminate"></mat-progress-bar>
         <app-result *ngFor="let event of events" [event]="event"></app-result>
     </div>
