--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <!-- <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
     <mat-icon>menu</mat-icon>
   </button> -->
-  <span>Gradlife</span>
+  <a routerLink="/">Gradlife</a>
   <span class="toolbar-spacer"></span>
   <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
     <mat-icon>settings</mat-icon>
