--- a/src/app/components/search-box/search-box.component.html
+++ b/src/app/components/search-box/search-box.component.html
@@ -2,7 +2,7 @@
     <div class="form-layout">
         <mat-form-field class="full-width" appearance="fill" [hideRequiredMarker]="true">
             <mat-label>{{(placeholder$ | async) || 'Try "movie night"'}}</mat-label>
-            <input #queryInput name="query" [(ngModel)]="query" type="search" matInput required minlength="3">
+            <input #queryInput name="query" [(ngModel)]="query" type="search" matInput required minlength="3" autocomplete="off">
     
             <button *ngIf="query" matSuffix mat-icon-button aria-label="Clear" (click)="query=''">
                 <mat-icon>close</mat-icon>
@@ -15,16 +15,25 @@
     <div class="date-row">
         <mat-form-field appearance="fill">
             <mat-label>Start date</mat-label>
-            <input matInput [matDatepicker]="startPicker">
+            <input name="startDate`" matInput [(ngModel)]="startDate" [matDatepicker]="startPicker">
             <mat-datepicker-toggle matSuffix [for]="startPicker"></mat-datepicker-toggle>
             <mat-datepicker #startPicker></mat-datepicker>
         </mat-form-field>
 
         <mat-form-field appearance="fill">
             <mat-label>End date</mat-label>
-            <input matInput [matDatepicker]="endPicker">
+            <input name="endDate" matInput [(ngModel)]="endDate" [matDatepicker]="endPicker">
             <mat-datepicker-toggle matSuffix [for]="endPicker"></mat-datepicker-toggle>
             <mat-datepicker #endPicker></mat-datepicker>
+        </mat-form-field>
+
+        <mat-form-field appearance="fill">
+            <mat-label>Location</mat-label>
+            <mat-select name="selectedLocation" [(ngModel)]="selectedLocation">
+                <mat-option *ngFor="let location of (locations | async)" [value]="location">
+                    {{location}}
+                </mat-option>
+            </mat-select>
         </mat-form-field>
     </div>
 </form>
