--- a/src/app/components/search-box/search-box.component.scss
+++ b/src/app/components/search-box/search-box.component.scss
@@ -16,14 +16,6 @@ mat-form-field {
 
 .form-layout {
     display: flex;
-
-    mat-form-field {
-        margin-right: 2rem;
-    }
-    
-    button {
-        flex-shrink: 1;
-    }
 }
 
 .date-row {
@@ -35,5 +27,9 @@ mat-form-field {
         &:not(:last-of-type) {
             margin-right: 1rem;
         }
+    }
+
+    button {
+        margin-left: 1rem;
     }
 }
