--- a/src/app/components/search-box/search-box.component.scss
+++ b/src/app/components/search-box/search-box.component.scss
@@ -14,6 +14,14 @@ form {
             }
         }
     }
+
+    button {
+        flex-grow: 1;
+
+        &:first-of-type {
+            margin-right: 1rem;
+        }
+    }
 }
 
 .full-width {
