--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,7 +1,7 @@
 <div class="search-component">
     <div class="greeting">
-        <h1 class="headline">Gradlife</h1>
-        <h2 class="title">Bringing graduate-level Panthers together</h2>
+        <h1 class="headline">GradLife</h1>
+        <h2 class="title">Bringing Graduate-Level Panthers Together</h2>
     </div>
 
     <app-search-box (search)="navigate($event)"></app-search-box>
