--- a/src/app/components/app/app.component.html
+++ b/src/app/components/app/app.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-  <a routerLink="/">Gradlife</a>
+  <a routerLink="/">GradLife</a>
   <span class="toolbar-spacer"></span>
 </mat-toolbar>
 
